package org.leap.domain.enums;

public enum OrderStatus {
    NEW,
    FILLED,
    REJECTED,
    CANCELLED
}